cabal-version:       2.0
name:                typelevel-prelude
version:             0.1.0.0
synopsis:            Standard module for type-level programming
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Csongor Kiss
maintainer:          kiss.csongor.kiss@gmail.com
-- copyright:
category:            Types
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Type.Prelude,
                       Type.Control.Monad.Reader,
                       Type.Control.Monad.State
  -- other-modules:
  other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds,
                       GADTs,
                       NoImplicitPrelude,
                       PolyKinds,
                       RankNTypes,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeInType,
                       TypeOperators,
                       UndecidableInstances,
                       UnsaturatedTypeFamilies
